# pixmap

./: .gitignore  README.md  app.py  final_map.json  modified_led_px.xml  patch_tool.py  pix_map.csv  pixel_map.py  pyproject.toml
gui/: app.js  index.html  styles.css
maps/: MA3_led_px.xml  combined_pixels_blender.json  modified_MA3_led_px.xml
pixmap/: __init__.py  camera.py  sACN.py
scans/: 20240502161806_side1.json  20240502163608_side2.json  20240502164825_side3.json  20240502165800_side4.json  20240527151949_side1.json  20240527153303_side2.json  20240527154318_side3.json  20240527155436_side4.json
utils/: MA3_grid_maker.py  blender_import.py  blender_map.py  grid_maker.py  map_combine.py  map_display.py  testing.py
