[tool.poetry]
name = "pixmap"
version = "0.1.0"
description = ""
authors = ["Matt Hadley <mattresspadley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"
sacn = "^1.9.0"
pandas = "^2.2.1"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
